# syncslide

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  faq-ideas.md  readme.md
config/: dev.bat  (+7 more)
syncslide-websocket/: Cargo.toml
syncslide-websocket/.sqlx/: query-0b2897b6e8346141e25c85ba5239dbfc02718fcda42aa3fdb470aa61e0883512.json  query-153725dfe8d4481a62b41979da4ea86223c1d271edc5c6e9d7623120d8a7b923.json  query-19e0aeefa8a95d4ce12eb476838ff147fb26257bbc616d9aa0449127dfc57f5a.json  query-24f9558d5618b96e742ac61129771b155a0325a95e506528fa3f0fd18abc7c8a.json  query-3261308826430d546afacc7646767b1302d186d2a2db985ed9f4b35e77c64186.json  query-3c56d53bfc07039aad14d9f549ea12ccd5c6983774a11e229d8358207ad3c0d5.json  query-3cca223f636421dd60c502264282dc63ea9e07310194e774e4e1ea73f2e4665f.json  query-465ca42da9c0cfd2fa3ae4ebfce27d61d5d2fc40b3302ee180b9ffa002513c97.json  query-46d33b050009782102efeebf823acebe3d7d30c1d6baa96a713d728c2bf0fdcd.json  query-549e1922b182ef0c207fa694fd3d33a7c6c627e551b039f771d6b98d0087f4a8.json  query-57c3c5331b4d27b7ec188d7d898dbef9bd69b7e30bcbce1324972713027bb968.json  query-607397c7276859ad8e4a1c4961a577966208572f1a68c4611cdf52cc069c27cc.json  query-6085bb52af0944cec5940e37b4a169b4f7b34aa21ca1d4814d02d2966ab02f6d.json  query-6521d9706d81722e51b5115f8e0672d86e875d6ad1c4ff3f258df61b16cb4a48.json  query-74a9f1ff95eccdc78396972385419aaf45102894a4378370a524c98e20dfa530.json  query-7bb8aed514edb27e9c1b9086977bfa402e4aeba71682c5de15a798ccfb9f1988.json  query-83fa709c08544b4f8a27bd0563a469f15b01d01ba7140d5b808f38eab6d2f8dd.json  (+9 more)
syncslide-websocket/css/: style.css
(+144 files in other folders)
